# digikam

./: .gitignore  .gitlab-ci.yml  .kde-ci.yml  .krazy  AUTHORS  CMakeCache.txt  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  Mainpage.dox  NEWS  PACKAGING  README.BUNDLES  README.md  bootstrap.linux  bootstrap.local  bootstrap.macports  bootstrap.mxe  bootstrap.qt6  bootstrap.tarball
core/: CMakeLists.txt
core/app/: CMakeLists.txt  DigikamCoreTarget.cmake  DigikamDatabaseTarget.cmake  DigikamExportAPI.cmake  DigikamGuiTarget.cmake  DigikamTarget.cmake
core/app/date/: datefolderview.cpp  datefolderview.h  ddateedit.cpp  ddateedit.h  ddatepicker.cpp  ddatepicker.h  ddatepicker_p.cpp  ddatepicker_p.h  ddatepickerpopup.cpp  ddatepickerpopup.h  ddatetable.cpp  ddatetable.h  ddatetable_p.cpp  ddatetable_p.h  ddatetimeedit.cpp  ddatetimeedit.h  dpopupframe.cpp  dpopupframe.h  monthwidget.cpp  monthwidget.h  timelinewidget.cpp  timelinewidget.h
core/app/dragdrop/: albumdragdrop.cpp  albumdragdrop.h  ddragobjects.cpp  ddragobjects.h  importdragdrop.cpp  importdragdrop.h  itemdragdrop.cpp  itemdragdrop.h  tagdragdrop.cpp  tagdragdrop.h
core/app/filters/: filtersidebarwidget.cpp  filtersidebarwidget.h  tagfilterview.cpp  tagfilterview.h
core/app/main/: digikam.notifyrc  digikamapp.cpp  digikamapp.h  digikamapp_camera.cpp  digikamapp_config.cpp  digikamapp_import.cpp  digikamapp_p.h  digikamapp_setup.cpp  digikamapp_solid.cpp  digikamapp_tools.cpp  digikamui5.rc  main.cpp  org.kde.digikam.appdata.xml  windows_stub_main.cpp
core/app/utils/: digikam_config.h.cmake.in  digikam_dbconfig.h.cmake.in  digikam_debug.cpp  digikam_debug.h  digikam_export.h  digikam_globals.cpp  digikam_globals.h  digikam_globals_bundles.cpp  digikam_globals_p.h  digikam_opencv.h.cmake.in  digikam_version.cpp  digikam_version.h.cmake.in
core/cmake/macros/: MacroBoolTo01.cmake  MacroBuildDateHeader.cmake  MacroCompiler.cmake  MacroDPlugins.cmake  MacroGitHeader.cmake  MacroJPEG.cmake  MacroOpenCV.cmake  MacroOpenMP.cmake  MacroSSE.cmake  MacroSanitizers.cmake  MacroUtils.cmake
core/cmake/modules/: FindASS.cmake  FindDirect2D.cmake  FindDirectX.cmake  FindFFmpeg.cmake  FindGDIPLUS.cmake  FindGLIB2.cmake  FindGphoto2.cmake  FindImageMagick.cmake  FindLCMS2.cmake  FindLQR-1.cmake  FindLensFun.cmake  FindLibheif.cmake  FindMarble.cmake  FindOpenSLES.cmake  FindPortaudio.cmake  FindPulseAudio.cmake  FindVAAPI.cmake  FindX265.cmake
core/cmake/rules/: RulesDNGSdk.cmake  RulesDoxygen.cmake  RulesFindQtCore.cmake  RulesInstallPaths.cmake  RulesKDEFramework.cmake  RulesLibExiv2.cmake  RulesLibJpeg.cmake  RulesLibMagick.cmake  RulesLibOpenCV.cmake  RulesLibOpenGL.cmake  RulesLibgphoto2.cmake  RulesLiblensfun.cmake  RulesLibraw.cmake  RulesMacOS.cmake  RulesMediaPlayer.cmake  RulesOptionDefinitions.cmake  RulesQtFramework.cmake  RulesWindows.cmake  RulesX11.cmake
core/cmake/templates/: DigikamInfo.plist.cmake.in  DigikamPluginConfig.cmake.in  ShowfotoInfo.plist.cmake.in  gitscript.cmake.in  gitversion.h.cmake.in  versioninfo.rc.cmake.in
core/data/: CMakeLists.txt
core/data/about/: CMakeLists.txt  main.html
core/data/colorschemes/: CMakeLists.txt  blackbody.colors  colorcontrast.colors  darkroom.colors  fusiongray.colors  graycard.colors  highkey.colors  lowkey.colors  shadeofgray.colors  sunsetcolor.colors  whitebalance.colors
core/data/database/: CMakeLists.txt  dbconfig.xml.cmake.in  mysql-global.conf
core/data/filters/: CMakeLists.txt
core/data/geolocation/: CMakeLists.txt
core/data/hotplug/: CMakeLists.txt  digikam-camera  digikam-opencamera.desktop.cmake.in
core/data/icons/: CMakeLists.txt
core/data/metadata/: CMakeLists.txt  darktable.dkamp  digikam.dkamp
core/data/pics/: CMakeLists.txt
core/data/profiles/: CMakeLists.txt
core/data/scripts/: CMakeLists.txt
core/dplugins/: CMakeLists.txt  TODO
core/dplugins/bqm/: CMakeLists.txt
core/dplugins/dimg/: CMakeLists.txt  README
core/dplugins/editor/: CMakeLists.txt
core/dplugins/generic/: CMakeLists.txt
core/dplugins/rawimport/: CMakeLists.txt
core/libs/: CMakeLists.txt
core/libs/album/: CMakeLists.txt
core/libs/database/: CMakeLists.txt  README.MYSQL
core/libs/dialogs/: CMakeLists.txt  dbusydlg.cpp  dbusydlg.h  dconfigdlg.cpp  dconfigdlg.h  dconfigdlgmngr.cpp  dconfigdlgmngr.h  dconfigdlgmodels.cpp  dconfigdlgmodels.h  dconfigdlgmodels_p.h  dconfigdlgview.cpp  dconfigdlgview.h  dconfigdlgview_p.cpp  dconfigdlgview_p.h  dconfigdlgwidgets.cpp  dconfigdlgwidgets.h  dconfigdlgwidgets_p.h  deletedialog.cpp  deletedialog.h  dmessagebox.cpp  dmessagebox.h  dprogressdlg.cpp  dprogressdlg.h  dsplashscreen.cpp  dsplashscreen.h  filesaveoptionsdlg.cpp  filesaveoptionsdlg.h  iccprofileinfodlg.cpp  iccprofileinfodlg.h  imagedialog.cpp  imagedialog.h  imagedialog_iconprovider.cpp  imagedialog_p.h  imagedialog_preview.cpp  imagedialog_tooltip.cpp  infodlg.cpp  infodlg.h  libsinfodlg.cpp  libsinfodlg.h  rawcameradlg.cpp  (+5 more)
core/libs/dimg/: CMakeLists.txt  dimg.cpp  dimg.h  dimg_bitsops.cpp  dimg_colors.cpp  dimg_copy.cpp  dimg_data.cpp  dimg_fileio.cpp  dimg_metadata.cpp  dimg_p.h  dimg_props.cpp  dimg_qimage.cpp  dimg_qpixmap.cpp  dimg_scale.cpp  dimg_transform.cpp  exposurecontainer.h
core/libs/dngwriter/: CMakeLists.txt  dngsettings.cpp  dngsettings.h  dngwriter.cpp  dngwriter.h  dngwriter_backupraw.cpp  dngwriter_convert.cpp  dngwriter_exif.cpp  dngwriter_export.cpp  dngwriter_import.cpp  dngwriter_makernote.cpp  dngwriter_mosaic.cpp  dngwriter_negative.cpp  dngwriter_p.cpp  dngwriter_p.h  dngwriter_postprocess.cpp  dngwriter_xmp.cpp  dngwriterhost.cpp  dngwriterhost.h
core/libs/dplugins/: CMakeLists.txt
core/libs/dragdrop/: CMakeLists.txt  abstractitemdragdrophandler.cpp  abstractitemdragdrophandler.h  dragdropimplementations.cpp  dragdropimplementations.h
core/libs/dtrash/: CMakeLists.txt  dtrash.cpp  dtrash.h  dtrashiteminfo.cpp  dtrashiteminfo.h  dtrashitemmodel.cpp  dtrashitemmodel.h
core/showfoto/: CMakeLists.txt
core/tests/: CMakeLists.txt  README  dtestdatadir.h
core/utilities/: CMakeLists.txt
po/ar/: digikam.po
(+4779 files in other folders)
